syntax = "proto3";
package language;

import "common.proto";

option go_package = "github.com/saiponethaaung/language-learner/apps/api/language";

message GetLanguagesRequest {
    int32 page = 1;
    int32 limit = 2;
    string name = 3;
}

message CreateLanguageRequest {
    string name = 1;
    string code = 2;
}

message UpdateLanguageRequest {
    int32 id = 1;
    string name = 2;
    string code = 3;
}

message UpdateLanguageStatusRequest {
    int32 id = 1;
    bool status = 2;
}

message LanguageObject {
    int32 id = 1;
    string name = 2;
    string code = 3;
    string createdAt = 4;
    string updatedAt = 5;
}

message PaginationResponse {
    repeated LanguageObject data = 1;
    common.PaginationObject pagination = 2;
}

message GetLanguagesByIdsRequest {
    repeated int32 ids = 1;
}

message LanguagesResponse {
    repeated LanguageObject languages = 1;
}

service LanguageService {
    rpc GetLanguages(GetLanguagesRequest) returns (PaginationResponse) {}
    rpc GetLanguagesByIds(GetLanguagesByIdsRequest) returns (LanguagesResponse) {}
    rpc GetLanguage(common.IntIDRequest) returns (LanguageObject) {}
    rpc CreateLanguage(CreateLanguageRequest) returns (LanguageObject) {}
    rpc UpdateLanguage(UpdateLanguageRequest) returns (LanguageObject) {}
    rpc UpdateLanguageStatus(UpdateLanguageStatusRequest) returns (LanguageObject) {}
    rpc DeleteLanguage(common.IntIDRequest) returns (common.EmptyRequest) {}
}